--- a/src/app/pages/transaction/transaction.component.html
+++ b/src/app/pages/transaction/transaction.component.html
@@ -14,7 +14,7 @@
         </thead>
         <tbody>
 
-            <tr *ngFor="let item of data">
+            <tr *ngFor="let item of data" (click)="viewTransDetails(item.trans_id)">
                 <td class="align-right">{{item.book_id}}</td>
                 <td class="align-right">{{item.room_name}}</td>
                 <td class="align-right">{{item.guest_name}}</td>
