--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -6,7 +6,11 @@
 
 <div class="row">
 
-    <ba-card class="col-xlg-12 col-xl-12 col-lg-12 col-sm-12 col-xs-12" title="Users by Country" baCardClass="medium-card">
+    <ba-card class="col-xlg-6 col-xl-6 col-lg-6 col-sm-6 col-xs-6" title="Users by Country" baCardClass="medium-card">
+        <traffic-chart></traffic-chart>
+    </ba-card>
+
+    <ba-card class="col-xlg-6 col-xl-6 col-lg-6 col-sm-6 col-xs-6" title="Users by Country" baCardClass="medium-card">
         <users-map></users-map>
     </ba-card>
 </div>
