HaiLT: House Details

--- a/src/app/pages/users/user-details/user-details.component.html
+++ b/src/app/pages/users/user-details/user-details.component.html
@@ -78,7 +78,7 @@
                     </tab>
 
                     <tab heading="Transactions">
-                        <trans (updateList)="updateList($event)"></trans>
+                        <trans [tranList]="tranList"></trans>
                     </tab>
 
                 </tabset>
