--- a/src/app/pages/houses/houses.component.html
+++ b/src/app/pages/houses/houses.component.html
@@ -24,11 +24,11 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let item of data">
-                        <td class="align-right">{{item.Title}}</td>
-                        <td class="align-right">{{item.CountryId}}</td>
-                        <td class="align-right">{{item.HouseType}}</td>
-                        <td class="align-right">{{item.Address}}</td>
+                    <tr *ngFor="let item of data" (click)="viewDetails(item.id)">
+                        <td class="align-right">{{item.id}}</td>
+                        <td class="align-right">{{item.host_id}}</td>
+                        <td class="align-right">{{item.house_type}}</td>
+                        <td class="align-right">{{item.address}}</td>
                         <td class="align-right">{{item.visited_count}}</td>
                     </tr>
                 </tbody>
