--- a/src/app/pages/users/user.html
+++ b/src/app/pages/users/user.html
@@ -36,95 +36,84 @@
 
 
             <!-- Tabs -->
-            <div class="nav nav-tabs">
-                <li class="nav-item">
-                    <a class="nav-link active" (click)="openCity($event, 'All')">All</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" (click)="openCity($event, 'Actived')">Activated</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" (click)="openCity($event, 'Banned')">Blocked</a>
-                </li>
-            </div>
+            <tabset type="pills">
+                <tab heading="All">
 
-            <div id="All" class="tabcontent" style="display: block;">
-
-                <table class="table table-hover">
-                    <thead>
-                        <tr class="black-muted-bg">
-                            <th>User Name</th>
-                            <th>Phone Number</th>
-                            <th>Email</th>
-                            <th>Rooms</th>
-                            <!--<th >Status</th>-->
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody>
+                    <table class="table table-hover">
+                        <thead>
+                            <tr class="black-muted-bg">
+                                <th>User Name</th>
+                                <th>Phone Number</th>
+                                <th>Email</th>
+                                <th>Rooms</th>
+                                <!--<th >Status</th>-->
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
 
 
-                        <tr *ngFor="let item of data">
-                            <td (click)="viewUserDetails(item.id)">
-                                {{item.username}}
-                            </td>
-                            <td (click)="viewUserDetails(item.id)">{{item.phone}}</td>
-                            <td (click)="viewUserDetails(item.id)">{{item.email}}</td>
-                            <td>{{item.totalRoom}}</td>
-                            <!--<td>{{(item.isDeleted)?" <button class="btn-xs btn-success">Activated</button>":  <button class="btn-xs btn-success">Block</button>"}}-->
-                            <!--</td>
+                            <tr *ngFor="let item of data">
+                                <td (click)="viewUserDetails(item.id)">
+                                    {{item.username}}
+                                </td>
+                                <td (click)="viewUserDetails(item.id)">{{item.phone}}</td>
+                                <td (click)="viewUserDetails(item.id)">{{item.email}}</td>
+                                <td>{{item.totalRoom}}</td>
+                                <!--<td>{{(item.isDeleted)?" <button class="btn-xs btn-success">Activated</button>":  <button class="btn-xs btn-success">Block</button>"}}-->
+                                <!--</td>
                             <td></td>-->
-                            <td>
-                                <button (click)="banUser($event, item)" class="{status-button btn btn-xs btn-danger">
+                                <td>
+                                    <button (click)="banUser($event, item)" class="{status-button btn btn-xs btn-danger">
                                     {{(item.isBanned)?"Un block":"Block"}}
                                 </button>
-                            </td>
-                        </tr>
+                                </td>
+                            </tr>
 
-                    </tbody>
-                </table>
-            </div>
+                        </tbody>
+                    </table>
+                </tab>
 
-            <div id="Actived" class="tabcontent">
+                <tab heading="Activated">
 
-                <table class="table table-bordered">
-                    <thead>
-                        <tr>
-                            <th class="align-right">username</th>
-                            <th class="align-right">phone</th>
-                            <th class="align-right">email</th>
-                            <th class="align-right">Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        Comming soon !
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th class="align-right">username</th>
+                                <th class="align-right">phone</th>
+                                <th class="align-right">email</th>
+                                <th class="align-right">Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            Comming soon !
 
 
-                    </tbody>
-                </table>
-            </div>
+                        </tbody>
+                    </table>
+                </tab>
 
-            <div id="Banned" class="tabcontent">
+                <tab heading="Banned">
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th class="align-right">username</th>
+                                <th class="align-right">phone</th>
+                                <th class="align-right">email</th>
+                                <th class="align-right">Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
 
-                <table class="table table-bordered">
-                    <thead>
-                        <tr>
-                            <th class="align-right">username</th>
-                            <th class="align-right">phone</th>
-                            <th class="align-right">email</th>
-                            <th class="align-right">Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody>
+                            Comming soon !
 
-                        Comming soon !
+                        </tbody>
+                    </table>
 
-                    </tbody>
-                </table>
+                </tab>
 
-            </div>
+            </tabset>
             <!-- /Tabs -->
-
 
         </ba-card>
     </div>
