--- a/src/app/pages/houses/house-details/house-details.component.html
+++ b/src/app/pages/houses/house-details/house-details.component.html
@@ -19,6 +19,13 @@
                     </div>
 
 
+                    <div class="col-lg-2">
+                        <button class="btn btn-success" (click)="setApprove(houseInfo.house_id)">
+                            {{houseInfo.isApprove?"disapprove":"approve"}}
+                            </button>
+                    </div>
+
+
                 </div>
 
                 <div class="form-group row">
